consult doctor home page and upload images. Not fully realize the function yet, just commit in case I lost it during merging.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="menu_item_6_patient">Log out</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="change_photo_dialog">ChangePhotoDialog</string>
 </resources>
