just doctor end nav bar. no other thing. To access the code: login activity -> uncomment the commented intent lines.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">DoctorPatientApp</string>
     <string name="default_nav_bar_text">Patient Name</string>
+    <string name="doctor_default_nav_bar_text">Doctor Name</string>
     <string name="menu_item_1_patient">Patient Profile</string>
     <string name="menu_item_2_patient">Medical Condition</string>
     <string name="menu_item_3_patient">Consult a Doctor</string>
